# cob_scenarios

cob_demo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cob_demo/config/demo/: command_gui_buttons.yaml
cob_demo/launch/: dashboard.launch  start_demo.launch  upload_param.launch
cob_demo/scripts/: trigger_svrs.py
cob_scenarios/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
