<?xml version="1.0"?>
<package>
  <name>cob_demo</name>
  <version>0.0.0</version>
  <description>The cob_demo package</description>
  <maintainer email="nhg@todo.todo">nhg</maintainer>
  <license>TODO</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cob_script_server</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>std_srvs</run_depend>

  <build_depend>cob_bringup</build_depend>
  <build_depend>cob_command_gui</build_depend>
  <build_depend>cob_dashboard</build_depend>
  <build_depend>cob_script_server</build_depend>
  <run_depend>cob_bringup</run_depend>
  <run_depend>cob_command_gui</run_depend>
  <run_depend>cob_dashboard</run_depend>
  <run_depend>cob_script_server</run_depend>

  <export>

  </export>
</package>
